# resources

./: .gitignore  LICENSE  README.md  pitch-recognition-logistic-reg.ipynb
DispatchQueue-c++/: .gitignore  DispatchQ.cbp  DispatchQ.depend  DispatchQ.layout  DispatchQueue.cpp  DispatchQueue.h  main.cpp
OboeRecording-And-DispatchQueue/: settings.gradle
OboeRecording-And-DispatchQueue/app/: build.gradle
OboeRecording-And-DispatchQueue/app/src/main/cpp/: AudioRecordEngine.cpp  AudioRecordEngine.h  CMakeLists.txt  DispatchQueue.cpp  DispatchQueue.h  FFTNativeWrapper.cpp  FFTNativeWrapper.h  MyFFTAnalysis.cpp  MyFFTAnalysis.h  RecordingCallbackImp.cpp  RecordingCallbackImp.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  jni-bridge.cpp  macros.h
OboeRecording-And-DispatchQueue/gradle/wrapper/: gradle-wrapper.properties
dockerWorkspace/frontend/: Dockerfile  Dockerfile.dev  docker-compose.yml  package-lock.json
dockerWorkspace/frontend/src/: App.js  App.test.js
flutterTraining/flutter_app/: pubspec.yaml
flutterTraining/flutter_app/android/app/: build.gradle
flutterTraining/flutter_app/lib/: main.dart
flutterTraining/flutter_app/test/: widget_test.dart
flutterTraining/i_am_poor/: pubspec.yaml
flutterTraining/i_am_poor/lib/: main.dart
mapsAndProperty/: LocationContainer.py  Point.py  hdb.py  hdb_map.html  list.txt  maps.py  onemap_client.py  readme
mapsAndProperty/crawlerSrapper/: scrapy.cfg
mapsAndProperty/crawlerSrapper/hdb_listing/: hdb-1.html  items.py  middlewares.py  pipelines.py  settings.py
threading/: HandlerCallback.java  WorkerThread.java
(+31 files in other folders)
